# Intelligent-Parking-System

./: LICENSE  README.md
CarRecognizer/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  plates.db  pnpm-lock.yaml  pyproject.toml
CarRecognizer/src/: main.py
CarRecognizer/src/db/: models.py  session.py
CarRecognizer/src/processing/: car_detector.py  car_model_recognizer.py
CarRecognizer/src/routes/: admin_panel.py  auth.py  detect.py  gate.py  stream.py
CarRecognizer/src/server/: server.py
CarRecognizer/src/services/: plate_service.py
CarRecognizer/src/static/css/: input.css  tailwind.css
CarRecognizer/src/static/js/: admin.bundle.js  admin.js  login.js
CarRecognizer/src/templates/: admin.html  base.html  login.html
CarRecognizer/src/websocket/: admin_manager.py  base_manager.py  gate_manager.py  stream_manager.py
Common_Issues_README/: README.md
Common_Issues_README/backup/: sdkconfig
DoorCompanion/: build.gradle.kts  settings.gradle.kts
DoorCompanion/app/: build.gradle.kts
DoorCompanion/app/src/androidTest/java/com/example/doorcompanion/: ExampleInstrumentedTest.kt
DoorCompanion/app/src/main/: AndroidManifest.xml
DoorCompanion/app/src/main/java/com/example/doorcompanion/: BleDevice.kt  EspBleScanListener.kt  MainActivity.kt  WifiProvisioningListener.kt  utils.kt
DoorCompanion/app/src/main/java/com/example/doorcompanion/routing/: Router.kt  Screen.kt
DoorCompanion/app/src/main/java/com/example/doorcompanion/screens/Auth/: AuthViewModel.kt  LoginScreen.kt  SignupScreen.kt
DoorCompanion/app/src/main/java/com/example/doorcompanion/screens/BleScanScreen/: BleDeviceItem.kt  BleDevicesList.kt  BleScanScreen.kt  BleScanViewModel.kt  EspBleScanListener.kt
DoorCompanion/app/src/main/java/com/example/doorcompanion/screens/DeviceProvisioningScreen/: AwesomeSuccess.kt  DeviceConnectionViewModel.kt  DeviceProvisioningForm.kt  DeviceProvisioningScreen.kt  ProvisioningLogs.kt  ProvisioningLogsItem.kt
DoorCompanion/app/src/main/java/com/example/doorcompanion/screens/DeviceStats/: DeviceStatsScreen.kt  DeviceStatsViewModel.kt
DoorCompanion/app/src/main/java/com/example/doorcompanion/screens/DeviceSummary/: DeviceSummaryScreen.kt  DeviceSummaryViewModel.kt  DisplayStats.kt  LineChart.kt
DoorCompanion/app/src/main/res/drawable/: awesome.xml
DoorCompanion/app/src/main/res/values/: strings.xml  themes.xml
DoorCompanion/app/src/test/java/com/example/doorcompanion/: ExampleUnitTest.kt
DoorCompanion/gradle/: libs.versions.toml
DoorCompanion/gradle/wrapper/: gradle-wrapper.properties
Projekt/: .clang-format  .project  README.md  partitions.csv  sdkconfig  sdkconfig.old
Projekt/main/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt_utils.c  mqtt_utils.h  my_ssd1306.c  my_ssd1306.h  nvs_manager.c  nvs_manager.h  ultrasonic.c  ultrasonic.h  utils.c  utils.h  wifi.c  wifi.h
ProjektExpanded/: .cproject  .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.old
ProjektExpanded/main/: .cproject  CMakeLists.txt  camera_stream.c  camera_stream.h  font8x8_basic.h  idf_component.yml  main.c  mqtt_utils.c  my_ssd1306_init.c  sg90.c  ultrasonic.c  ultrasonic.h  wifi.c  wifi.h
ServoESP/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
ServoESP/main/: CMakeLists.txt  app_context.c  app_context.h  esp_idf_lib_helpers.h  gate_controller.c  gate_controller.h  idf_component.yml  main.c  my_ssd1306.c  my_ssd1306.h  my_ssd1306_init.c  sg90.h  utils.c  utils.h  wifi.c  ws_listener.c  ws_listener.h
ServoESP/spiffs/www/: index.html
sensor-mqtt/: .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  local.properties  settings.gradle.kts
sensor-mqtt/config/: mqtt.example.properties
sensor-mqtt/gradle/wrapper/: gradle-wrapper.properties
sensor-mqtt/src/main/kotlin/: Main.kt
sensor-mqtt/src/main/kotlin/api/: FirestoreClient.kt
sensor-mqtt/src/main/kotlin/mqtt/: Deserializer.kt  MqttProperties.kt  MqttSerialization.kt  SensorMqttCallback.kt  SensorMqttClient.kt  Topic.kt
(+3 files in other folders)
